crates/enum-name-derive/tests/ui/invalid_enum.stderr
error: proc-macro derive panicked
 --> tests/ui/invalid_enum.rs:4:10
  |
4 | #[derive(EnumFilename)]
  |          ^^^^^^^^^^^^
  |
  = help: message: EnumFilename can only be derived for enums
