crates/enum-name-derive/tests/ui/invalid_enum.rs

use enum_name_derive::EnumFilename;

#[derive(EnumFilename)]
pub struct NotAnEnum {} // âŒ Should fail: EnumFilename only supports enums!

fn main() {}

